namespace idou.Core.Domain;

public class EntityKey
{
    public string Value { get; }
}