namespace idou.Core.Domain;

public class EntityType
{
    public string Name { get; }
}