namespace idou.Core.Domain.Enums;

public enum ChangeOperation
{
    Upsert,
    Delete
}