namespace idou.Core.Domain.Enums;

public enum JobStatus
{
    Created,
    Bootstrapping,
    Running,
    Paused,
    Stopped,
    Faulted
}