namespace idou.Core.Domain.Enums;

public enum UpsertMode
{
    InsertOnly,
    UpdateOnly,
    Upsert
}