namespace idou.Core.Engine;

public class SyncJob
{
    
}