namespace idou.Core;

public interface IDataSource
{
    
}