namespace idou.Core;

public interface IDataTarget
{
    
}